[gd_scene load_steps=2 format=3 uid="uid://c8qvt5qjkuv7q"]

[ext_resource type="Script" path="res://scenes/equipment/equipment_manager_scene.gd" id="1_yvmqe"]

[node name="EquipmentManagerScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "装备管理"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CombineButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "合成装备"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "关闭"

[node name="ContentPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ContentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="EquipmentList" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer/EquipmentList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer/EquipmentList/VBoxContainer"]
layout_mode = 2
text = "可用装备"
horizontal_alignment = 1

[node name="EquipmentGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer/EquipmentList/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3

[node name="ChessList" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer/ChessList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer/ChessList/VBoxContainer"]
layout_mode = 2
text = "棋子列表"
horizontal_alignment = 1

[node name="ChessGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ContentPanel/HBoxContainer/ChessList/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="FooterPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FooterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer"]
layout_mode = 2
text = "选择装备和棋子进行装备"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EquipmentItemTemplate" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(150, 180)
layout_mode = 0
offset_right = 150.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="EquipmentItemTemplate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentIcon" type="TextureRect" parent="EquipmentItemTemplate/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="EquipmentName" type="Label" parent="EquipmentItemTemplate/VBoxContainer"]
layout_mode = 2
text = "装备名称"
horizontal_alignment = 1

[node name="EquipmentType" type="Label" parent="EquipmentItemTemplate/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "武器"
horizontal_alignment = 1

[node name="EquipmentDesc" type="Label" parent="EquipmentItemTemplate/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "装备描述"
horizontal_alignment = 1
autowrap_mode = 3

[node name="SelectButton" type="Button" parent="EquipmentItemTemplate/VBoxContainer"]
layout_mode = 2
text = "选择"

[node name="ChessItemTemplate" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(120, 150)
layout_mode = 0
offset_right = 120.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="ChessItemTemplate"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChessIcon" type="TextureRect" parent="ChessItemTemplate/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ChessName" type="Label" parent="ChessItemTemplate/VBoxContainer"]
layout_mode = 2
text = "棋子名称"
horizontal_alignment = 1

[node name="EquipmentSlots" type="HBoxContainer" parent="ChessItemTemplate/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="WeaponSlot" type="ColorRect" parent="ChessItemTemplate/VBoxContainer/EquipmentSlots"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.8, 0.2, 0.2, 0.7)

[node name="ArmorSlot" type="ColorRect" parent="ChessItemTemplate/VBoxContainer/EquipmentSlots"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.2, 0.2, 0.8, 0.7)

[node name="AccessorySlot" type="ColorRect" parent="ChessItemTemplate/VBoxContainer/EquipmentSlots"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
color = Color(0.8, 0.8, 0.2, 0.7)

[node name="SelectButton" type="Button" parent="ChessItemTemplate/VBoxContainer"]
layout_mode = 2
text = "选择"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer/CombineButton" to="." method="_on_combine_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
